tests/invalid/borrow_conflict/replace_field_while_parent_shared_borrowed.facet
struct Pair {
  mut x: unrestricted isize,
  y: unrestricted bool
}

fn main() -> unrestricted isize {
  let mut p: unrestricted Pair = Pair { x = 1, y = true };
  let r = (&p) in
  (replace p.x 2)
}
